// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`negative test: Missing mandatory field as mandated by TOT-specific options 1`] = `
{
  "category": "NIST",
  "code": "NIST_VALIDATION_ERROR",
  "detail": "Field 2.048 is mandatory but not provided",
  "nistSource": {
    "field": 48,
    "record": 1,
    "type": 2,
  },
  "source": "2/1/48",
}
`;

exports[`negative test: NIST field 1.002 is missing 1`] = `
{
  "category": "NIST",
  "code": "NIST_VALIDATION_ERROR",
  "detail": "Field 1.002 is mandatory but not provided",
  "nistSource": {
    "field": 2,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/2",
}
`;

exports[`negative test: NIST field 1.003 (CNT) at index #1 contains unsupported record type 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST record Type-99 is unsupported.",
  "endOffset": 24,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 25,
}
`;

exports[`negative test: NIST field 1.003 (CNT) at index #1 does not contain a numeric IDC 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST subfield 1.003.1 does not contain numeric value: [ [ '1', '1' ], [ '<', '00' ] ].",
  "endOffset": 23,
  "nistSource": {
    "field": 3,
    "record": 1,
    "subField": 1,
    "type": 1,
  },
  "source": "1/1/3/1",
  "startOffset": 24,
}
`;

exports[`negative test: NIST field 1.003 (CNT) at index #1 indicates another Type-1 record 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.003 indicates two Type-1 records: [ [ '1', '1' ], [ '1', '00' ] ].",
  "endOffset": 23,
  "nistSource": {
    "field": 3,
    "record": 1,
    "subField": 1,
    "type": 1,
  },
  "source": "1/1/3/1",
  "startOffset": 24,
}
`;

exports[`negative test: NIST field 1.003 (CNT) at index #1 indicates two Type-2 records 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "More than one Type-2 NIST record in one NIST file is unsupported.",
  "endOffset": 44,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 37,
}
`;

exports[`negative test: NIST field 1.003 (CNT) at index #1 is not an array 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST subfield 1.003.1 does not have a correct format: [ [ '1', '1' ], '1' ].",
  "endOffset": 20,
  "nistSource": {
    "field": 3,
    "record": 1,
    "subField": 1,
    "type": 1,
  },
  "source": "1/1/3/1",
  "startOffset": 21,
}
`;

exports[`negative test: NIST field 1.003 (CNT) is not an array 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.003 (CNT) does not have a correct format: '0'.",
  "endOffset": 16,
  "nistSource": {
    "field": 3,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/3",
  "startOffset": 0,
}
`;

exports[`negative test: Type-1 record contains NIST field 2.064 from a wrong record type 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 2.064 decoded at offset 9 contains an unexpected record type 2; expected 1.",
  "endOffset": 18,
  "nistSource": {
    "field": 64,
    "record": 1,
    "type": 2,
  },
  "source": "2/1/64",
  "startOffset": 9,
}
`;

exports[`negative test: Type-1 record does not end with a file separator 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Cannot find NIST file separator between offsets [0, 7].",
  "endOffset": 7,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 0,
}
`;

exports[`negative test: Type-1 record does not end with a file separator 2`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Cannot find NIST file separator between offsets [0, 7].",
  "endOffset": 7,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 0,
}
`;

exports[`negative test: Type-1 record does not have field 1.003 (CNT) 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.003 (CNT) was not found between offsets [0, 7].",
  "endOffset": 7,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 0,
}
`;

exports[`negative test: Type-1 record length field contains 0 for its value 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.001 (LEN) does not contain a positive number: 0.",
  "endOffset": undefined,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/1",
  "startOffset": undefined,
}
`;

exports[`negative test: Type-1 record length field contains a negative value 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.001 (LEN) does not contain a positive number: -8.",
  "endOffset": undefined,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/1",
  "startOffset": undefined,
}
`;

exports[`negative test: Type-1 record length field does not contain field number in a correct format 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field number '1 001' at offset 0 does not have a correct format of 'x.yyy': '1 001'.",
  "endOffset": 6,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 0,
}
`;

exports[`negative test: Type-1 record length field does not contain field number separator 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Cannot find NIST field number separator between offsets [5, 11]",
  "endOffset": 11,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 5,
}
`;

exports[`negative test: Type-1 record length field does not have a numeric value 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.001 (LEN) does not have a numeric value: '<=>'.",
  "endOffset": undefined,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/1",
  "startOffset": undefined,
}
`;

exports[`negative test: Type-1 record length field does not have any value 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST field 1.001 (LEN) does not have any value.",
  "endOffset": undefined,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/1",
  "startOffset": undefined,
}
`;

exports[`negative test: Type-1 record length is more than the actual buffer length 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Record length decoded from NIST field 1.001 indicates 18 bytes but only 9 available.",
  "endOffset": 17,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 1,
  },
  "source": "1/1/1",
  "startOffset": 0,
}
`;

exports[`negative test: Type-2 record is missing field 2.001 (LEN) 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Record 2 does not contain NIST field 2.001 (LEN).",
  "endOffset": 31,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 2,
  },
  "source": "2/1/1",
  "startOffset": 24,
}
`;

exports[`negative test: Type-2 record is missing file separator 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "Cannot find NIST file separator between offsets [24, 30].",
  "endOffset": 30,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 24,
}
`;

exports[`negative test: Type-4 record has insufficient length 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST Type-4 record #1 contains only 3 bytes but at least 18 bytes required.",
  "endOffset": 26,
  "nistSource": undefined,
  "source": undefined,
  "startOffset": 24,
}
`;

exports[`negative test: Type-4 record length indicates more bytes than available 1`] = `
{
  "category": "NIST",
  "code": "NIST_DECODE_ERROR",
  "detail": "NIST Type-4 record #1's record length indicates 772 bytes but only 20 available.",
  "endOffset": 43,
  "nistSource": {
    "field": 1,
    "record": 1,
    "type": 4,
  },
  "source": "4/1/1",
  "startOffset": 24,
}
`;
